2006-08-08  Douglas Bates  <bates@R-project.org>

	* src/Csparse.c (Csparse_crossprod): tcrossprod result has stype = -1

2006-08-07  Douglas Bates  <bates@R-project.org>

	* src/Csparse.c (Csparse_crossprod): Set stype on result to avoid
	R-level conversion to a sparse symmetric class.
	* R/Tsparse.R,R/Csparse.R (crossprod and tcrossprod methods):
	Remove conversion to sparse symmetric classes (now done in C code).

2006-08-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgCMatrix.R: disable old crossprod and tcrossprod methods
	* man/band.Rd:  adapt the \dontshow{} unit test.

2006-08-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.995-14  for CRAN

	* tests/other-pkgs.R: oops: library(Matrix) outside *if* !

	* R/sparseMatrix.R (Tsp2grNEL): fixed Tsparse -> graph coercion
	* tests/other-pkgs.R:  more checks, sparseMatrix -> graph

	* R/Auxiliaries.R (as_Tsparse, as_Rsparse): new
	* R/Tsparse.R (tril, triu, band): methods
	* R/dgRMatrix.R (tril, ...):	ditto
	* man/band.Rd:			ditto

2006-08-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (head, tail): directly use utils:::head.matrix
		to be up-to-date automatically.

2006-08-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.995-13 to be released to CRAN

	* DESCRIPTION (Lazydata): no, instead of 'yes' because it fails for:
	* data/CAex.R, inst/external/CAex_slots.rda: replacing data/CAex.rda
	* data/KNex.R, inst/external/KNex_slots.rda: replacing data/KNex.rda
	such that the S4 objects are always created by the current version
	of R and 'Matrix' class definitions.

2006-08-01  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (LMEoptimize method), tests/lmer.R,
	inst/external/test3comp.rda: Added warnings for convergence on
	boundary and test cases.

	* src/lmer.c (mer_postVar): Modified to return the variances that
	are marginal to the fixed effects, not conditional on them (which
	is what the bVar slot contents represent).
