@@ -1,7 +1,9 @@
 2006-08-08  Douglas Bates  <bates@R-project.org>
 
-	* src/Csparse.c (Csparse_crossprod): tcrossprod result has stype = -1
-
+	* src/Csparse.c (Csparse_crossprod): tcrossprod result has stype = -1.
+	Later modified to return the upper triangle only.
+	* R/dgTMatrix.R: Remove vestigial crossprod and tcrossprod methods.
+	
 2006-08-07  Douglas Bates  <bates@R-project.org>
 
 	* src/Csparse.c (Csparse_crossprod): Set stype on result to avoid
